fix word wrap on checkbox and radio buttons

--- a/src/app/quiz/card/card.component.scss
+++ b/src/app/quiz/card/card.component.scss
@@ -153,3 +153,11 @@ mat-progress-bar {
   height: 120px;
   margin: 20px;
 }
+
+::ng-deep.mat-checkbox-layout .mat-checkbox-label {
+  white-space: normal !important;
+}
+
+::ng-deep.mat-radio-layout .mat-radio-label {
+  white-space: normal !important;
+}
